# revibe-mcp

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  server.json
python/: pyproject.toml
python/revibe_mcp/: cli.py  server.py
skills/claude-code/: SKILL.md
skills/openclaw/: SKILL.md
src/: cli.ts  server.ts
