[project]
name = "revibe-mcp"
version = "0.1.0"
description = "MCP server for Revibe codebase analysis — works with Claude Desktop, Cursor, Windsurf, and any MCP-compatible client"
readme = "../README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Revibe Codes", email = "hello@revibe.codes" },
]
keywords = ["mcp", "revibe", "code-analysis", "architecture", "claude", "cursor", "windsurf", "ai-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://revibe.codes"
Repository = "https://github.com/selvatuple/revibe-mcp"
Documentation = "https://revibe.codes"

[project.scripts]
revibe-mcp = "revibe_mcp.server:main"
revibe-mcp-auth = "revibe_mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
